--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
   <body>
     <header>
       <nav>
+        <a href="/"><span>Web</span>Studio</a>
         <ul>
-          <li>
-            <a href="/"><span>Web</span>Studio</a>
-          </li>
           <li><a href="">Студія</a></li>
           <li><a href="">Портфоліо</a></li>
           <li><a href="">Контакти</a></li>
@@ -54,9 +52,21 @@
 
       <section>
         <h2>Чим ми займаємося</h2>
-        <img src="./images/job/desktop-dev.jpg" alt="розробка десктопних додатків" width="370" />
-        <img src="./images/job/mobile-dev.jpg" alt="розробка мобільних додатків" width="370" />
-        <img src="./images/job/design.jpg" alt="веб-дизайн" width="370" />
+        <ul>
+          <li>
+            <img
+              src="./images/job/desktop-dev.jpg"
+              alt="розробка десктопних додатків"
+              width="370"
+            />
+          </li>
+          <li>
+            <img src="./images/job/mobile-dev.jpg" alt="розробка мобільних додатків" width="370" />
+          </li>
+          <li>
+            <img src="./images/job/design.jpg" alt="веб-дизайн" width="370" />
+          </li>
+        </ul>
       </section>
 
       <section>
@@ -87,12 +97,10 @@
     </main>
 
     <footer>
+      <a href="/"><span>Web</span>Studio</a>
       <address>
         <ul>
-          <li>
-            <a href="/"><span>Web</span>Studio</a>
-          </li>
-          <li>м. Київ, пр-т Лесі Українки, 26</li>
+          <li><a href="">м. Київ, пр-т Лесі Українки, 26</a></li>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
