--- a/index.html
+++ b/index.html
@@ -54,11 +54,7 @@
         <h2>Чим ми займаємося</h2>
         <ul>
           <li>
-            <img
-              src="./images/job/desktop-dev.jpg"
-              alt="розробка десктопних додатків"
-              width="370"
-            />
+            <img src="./images/job/desktop-dev.jpg" alt="розробка десктопних додатків" width="370" />
           </li>
           <li>
             <img src="./images/job/mobile-dev.jpg" alt="розробка мобільних додатків" width="370" />
@@ -73,22 +69,22 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="./images/team/igor.jpg" alt="Product Designer" width="270" />
+            <img src="./images/team/igor.jpg" alt="Ігор Дем'яненко" width="270" />
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/team/olga.jpg" alt="Frontend Developer" width="270" />
+            <img src="./images/team/olga.jpg" alt="Ольга Рєпіна" width="270" />
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/team/mykola.jpg" alt="Marketologist" width="270" />
+            <img src="./images/team/mykola.jpg" alt="Микола Тарасов" width="270" />
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/team/myhailo.jpg" alt="UI Designer" width="270" />
+            <img src="./images/team/myhailo.jpg" alt="Михайло Єрмаков" width="270" />
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
